--- a/src/styles/room-code.scss
+++ b/src/styles/room-code.scss
@@ -2,14 +2,13 @@
   height: 40px;
   border-radius: 8px;
   overflow: hidden;
-
   background: #fff;
   border: 1px solid #835afd;
   cursor: pointer;
-
   display: flex;
 
   div {
+    height: 100%;
     background: #835afd;
     padding: 0 10px;
     display: flex;
