--- a/src/styles/button.scss
+++ b/src/styles/button.scss
@@ -14,6 +14,13 @@
   img {
     margin-right: 8px;
   }
+
+  &.outlined {
+    background: #fff;
+    border: 1px solid #835afd;
+    color: #835afd;
+  }
+
   &:not(:disabled):hover {
     filter: brightness(0.9);
   }
